adding final union

--- a/electre.ipynb
+++ b/electre.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -414,7 +414,7 @@
        "P5  0.666667    0  0.8  0.8         1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,25 +453,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test avec les données du prof\n",
+    "data = [\n",
+    "    [1, 0, 1, 0.8, 0.1],\n",
+    "    [0.6, 1, 0, 0.9, 0.67],\n",
+    "    [0.6, 0, 1, 0.6, 0.8],\n",
+    "    [0.25, 0.8, 0.67, 1, 0.85],\n",
+    "    [0.67, 0, 0.8, 0.8, 1]\n",
+    "]\n",
+    "credibilite_prof = pandas.DataFrame(index=projects_names,\n",
+    "                                    columns=projects_names,\n",
+    "                                    data=data)\n",
+    "credibilite = credibilite_prof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.3 # normalement mettre 0.3\n",
+    "beta = -0.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['P1', 'P4']"
+       "[['P2'], ['P4'], ['P1', 'P3', 'P5']]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpha = 0.4 # normalement mettre 0.3\n",
-    "beta = -0.15\n",
-    "\n",
-    "order = []\n",
+    "order_ascending = []\n",
     "\n",
     "credibilite2 = credibilite.copy()\n",
     "\n",
@@ -483,18 +510,159 @@
     "        for b in credibilite2.index.values:\n",
     "            if a != b and credibilite2.loc[a][b] >= lamba - s_lamba \\\n",
     "            and abs(credibilite2.loc[a][b] - credibilite2.loc[b][a]) <= s_lamba:\n",
-    "                #print(\"{} -> {}\".format(a, b))\n",
+    "                # Si une alternative est meilleure, elle gagne un point,\n",
+    "                # la moins bonne en perd un\n",
     "                qualification[a]+=1\n",
     "                qualification[b]-=1\n",
     "\n",
-    "    max_qual = qualification.idxmax()\n",
-    "    # On arrête si on a pas de meilleur TODO voir comment faire\n",
-    "    if (qualification == 0).all():\n",
+    "    # On cherche le/les meilleurs alternatives puis on les retire de la matrice\n",
+    "    max_qual = qualification.max()\n",
+    "    best = qualification.index[qualification == max_qual].tolist()\n",
+    "    credibilite2 = credibilite2.drop(index=best, columns=best)\n",
+    "    order_ascending.append(best)\n",
+    "    if len(credibilite2) == 0:\n",
     "        break\n",
-    "    credibilite2 = credibilite2.drop(max_qual, 0)\n",
-    "    credibilite2 = credibilite2.drop(max_qual, 1)\n",
-    "    order.append(max_qual)\n",
     "\n",
+    "order_ascending"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distillation ascendante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['P1', 'P2', 'P3'], ['P4'], ['P5']]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order_descending = []\n",
+    "\n",
+    "credibilite2 = credibilite.copy()\n",
+    "\n",
+    "for i in range(0,len(credibilite)):\n",
+    "    lamba = numpy.amax(credibilite2.to_numpy())\n",
+    "    s_lamba = alpha + beta * lamba\n",
+    "    qualification = pandas.Series(index = credibilite2.columns, dtype=int)\n",
+    "    for a in credibilite2.columns:\n",
+    "        for b in credibilite2.index.values:\n",
+    "            if a != b and credibilite2.loc[a][b] >= lamba - s_lamba \\\n",
+    "            and abs(credibilite2.loc[a][b] - credibilite2.loc[b][a]) <= s_lamba:\n",
+    "                qualification[b]+=1\n",
+    "                qualification[a]-=1\n",
+    "\n",
+    "    max_qual = qualification.max()\n",
+    "    best = qualification.index[qualification == max_qual].tolist()\n",
+    "    credibilite2 = credibilite2.drop(index=best, columns=best)\n",
+    "    order_descending.insert(0, best)\n",
+    "    if len(credibilite2) == 0:\n",
+    "        break\n",
+    "\n",
+    "order_descending"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classement final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['P2'], ['P1', 'P3'], ['P4'], ['P5']]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order = []\n",
+    "projects = projects_names\n",
+    "\n",
+    "for a, b in zip(order_ascending, order_descending):\n",
+    "    union = [x for x in a if x in b]\n",
+    "    union = [x for x in union if x in projects]\n",
+    "    if len(union) > 0:\n",
+    "        order.append(union)\n",
+    "        projects = [x for x in projects if x not in union]\n",
+    "\n",
+    "    dif = [x for x in a if x not in b]\n",
+    "    dif += [x for x in b if x not in a]\n",
+    "    dif = [x for x in dif if x in projects]\n",
+    "    if len(dif) > 0:\n",
+    "        order.append(dif)\n",
+    "        projects = [x for x in projects if x not in dif]\n",
+    "    \n",
+    "order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cas problématique à gérer sur le classement final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['P1'], ['P2', 'P3', 'P4', 'P5']]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order = []\n",
+    "projects = projects_names\n",
+    "\n",
+    "order_ascending = [['P1', 'P2', 'P3', 'P4', 'P5']]\n",
+    "order_descending = [['P1'], ['P4', 'P3'], ['P2'], ['P5']]\n",
+    "\n",
+    "for a, b in zip(order_ascending, order_descending):\n",
+    "    union = [x for x in a if x in b]\n",
+    "    union = [x for x in union if x in projects]\n",
+    "    if len(union) > 0:\n",
+    "        order.append(union)\n",
+    "        projects = [x for x in projects if x not in union]\n",
+    "\n",
+    "    dif = [x for x in a if x not in b]\n",
+    "    dif += [x for x in b if x not in a]\n",
+    "    dif = [x for x in dif if x in projects]\n",
+    "    if len(dif) > 0:\n",
+    "        order.append(dif)\n",
+    "        projects = [x for x in projects if x not in dif]\n",
+    "    \n",
     "order"
    ]
   }
