Use data from report

--- a/electre.ipynb
+++ b/electre.ipynb
@@ -32,17 +32,18 @@
    },
    "outputs": [],
    "source": [
+    "# Données du problème\n",
     "projets = [\n",
-    "    [-14, 90, 0, 40, 100],\n",
-    "    [129, 100, 0, 0, 0],\n",
-    "    [-10, 50, 0, 10, 100],\n",
-    "    [44, 90, 0, 5, 20],\n",
-    "    [-14, 100, 0, 20, 40]\n",
+    "    [-600, 4, 3, 10, 5],\n",
+    "    [-300, 3, 3, 8, 15],\n",
+    "    [-350, 5, 1, 8, 5],\n",
+    "    [-250, 1, 5, 4, 35],\n",
+    "    [-100, 2, 2, 5, 30],\n",
     "]\n",
-    "p = [50, 24, 1, 24, 20]\n",
-    "q = [25, 16, 0, 12, 10]\n",
-    "importance = [1, 1, 1, 1, 1]\n",
-    "veto = [100, 60, 2, 48, 90]"
+    "p = [100, 3, 3, 5, 10]\n",
+    "q = [50, 2, 2, 3, 5]\n",
+    "importance = [2, 1, 1, 2, 1]\n",
+    "veto = [200, 4, 4, 10, 20]"
    ]
   },
   {
@@ -86,91 +87,91 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>P1</th>\n",
-       "      <td>-14</td>\n",
-       "      <td>90</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>100</td>\n",
+       "      <td>-600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
-       "      <td>129</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-300</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
-       "      <td>-10</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>100</td>\n",
+       "      <td>-350</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
-       "      <td>44</td>\n",
-       "      <td>90</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-250</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
-       "      <td>-14</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
+       "      <td>-100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Préférence</th>\n",
-       "      <td>50</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Indifférence</th>\n",
-       "      <td>25</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Indifférence</th>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Importance</th>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Veto</th>\n",
-       "      <td>100</td>\n",
-       "      <td>60</td>\n",
-       "      <td>2</td>\n",
-       "      <td>48</td>\n",
-       "      <td>90</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               C1   C2  C3  C4   C5\n",
-       "P1            -14   90   0  40  100\n",
-       "P2            129  100   0   0    0\n",
-       "P3            -10   50   0  10  100\n",
-       "P4             44   90   0   5   20\n",
-       "P5            -14  100   0  20   40\n",
-       "Préférence     50   24   1  24   20\n",
-       "Indifférence   25   16   0  12   10\n",
-       "Importance      1    1   1   1    1\n",
-       "Veto          100   60   2  48   90"
+       "               C1  C2  C3  C4  C5\n",
+       "P1           -600   4   3  10   5\n",
+       "P2           -300   3   3   8  15\n",
+       "P3           -350   5   1   8   5\n",
+       "P4           -250   1   5   4  35\n",
+       "P5           -100   2   2   5  30\n",
+       "Préférence    100   3   3   5  10\n",
+       "Indifférence   50   2   2   3   5\n",
+       "Importance      2   1   1   2   1\n",
+       "Veto          200   4   4  10  20"
       ]
      },
      "execution_count": 3,
@@ -179,6 +180,7 @@
     }
    ],
    "source": [
+    "# Création de la matrice à partir des données du problème\n",
     "projects_names = ['P' + str(i + 1) for i in range(len(projets))]\n",
     "criterias_names = ['C' + str(i + 1) for i in range(len(projets[0]))]\n",
     "\n",
@@ -238,41 +240,41 @@
        "    <tr>\n",
        "      <th>P1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.571429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
-       "      <td>0.6</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.571429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.6</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.571429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.714286</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -280,12 +282,12 @@
        "</div>"
       ],
       "text/plain": [
-       "          P1   P2   P3   P4        P5\n",
-       "P1         1  0.8    1  0.8         1\n",
-       "P2       0.6    1  0.8  0.8  0.666667\n",
-       "P3       0.6  0.6    1  0.6       0.8\n",
-       "P4       0.6  0.8  0.8    1      0.75\n",
-       "P5  0.666667  0.8  0.8  0.8         1"
+       "          P1        P2        P3        P4        P5\n",
+       "P1         1  0.571429  0.714286  0.571429  0.571429\n",
+       "P2         1         1         1  0.857143  0.571429\n",
+       "P3         1  0.857143         1  0.428571  0.571429\n",
+       "P4  0.571429  0.857143  0.714286         1  0.714286\n",
+       "P5  0.714286         1  0.857143  0.857143         1"
       ]
      },
      "execution_count": 4,
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -365,40 +367,40 @@
        "      <th>P1</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -406,15 +408,15 @@
        "</div>"
       ],
       "text/plain": [
-       "          P1   P2   P3   P4        P5\n",
-       "P1         1    0    1  0.8         1\n",
-       "P2         0    1    0  0.8  0.666667\n",
-       "P3       0.6    0    1  0.6       0.8\n",
-       "P4       0.6  0.8  0.8    1      0.75\n",
-       "P5  0.666667    0  0.8  0.8         1"
+       "          P1        P2        P3        P4        P5\n",
+       "P1         1         0         0         0         0\n",
+       "P2         1         1         1         0         0\n",
+       "P3         1  0.857143         1         0         0\n",
+       "P4  0.571429  0.857143         0         1  0.714286\n",
+       "P5  0.714286         1  0.857143  0.857143         1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,27 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test avec les données du prof\n",
-    "data = [\n",
-    "    [1, 0, 1, 0.8, 0.1],\n",
-    "    [0.6, 1, 0, 0.9, 0.67],\n",
-    "    [0.6, 0, 1, 0.6, 0.8],\n",
-    "    [0.25, 0.8, 0.67, 1, 0.85],\n",
-    "    [0.67, 0, 0.8, 0.8, 1]\n",
-    "]\n",
-    "credibilite_prof = pandas.DataFrame(index=projects_names,\n",
-    "                                    columns=projects_names,\n",
-    "                                    data=data)\n",
-    "credibilite = credibilite_prof"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['P2'], ['P4'], ['P1', 'P3', 'P5']]"
+       "[['P5'], ['P1', 'P2', 'P3', 'P4']]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,21 +512,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distillation ascendante"
+    "## Distillation descendante"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['P1', 'P2', 'P3'], ['P4'], ['P5']]"
+       "[['P1', 'P2', 'P3', 'P5'], ['P4']]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['P2'], ['P1', 'P3'], ['P4'], ['P5']]"
+       "[['P5'], ['P1', 'P2', 'P3'], ['P4']]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,53 +583,6 @@
    "source": [
     "order = []\n",
     "projects = projects_names\n",
-    "\n",
-    "for a, b in zip(order_ascending, order_descending):\n",
-    "    union = [x for x in a if x in b]\n",
-    "    union = [x for x in union if x in projects]\n",
-    "    if len(union) > 0:\n",
-    "        order.append(union)\n",
-    "        projects = [x for x in projects if x not in union]\n",
-    "\n",
-    "    dif = [x for x in a if x not in b]\n",
-    "    dif += [x for x in b if x not in a]\n",
-    "    dif = [x for x in dif if x in projects]\n",
-    "    if len(dif) > 0:\n",
-    "        order.append(dif)\n",
-    "        projects = [x for x in projects if x not in dif]\n",
-    "    \n",
-    "order"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cas problématique à gérer sur le classement final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['P1'], ['P2', 'P3', 'P4', 'P5']]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "order = []\n",
-    "projects = projects_names\n",
-    "\n",
-    "order_ascending = [['P1', 'P2', 'P3', 'P4', 'P5']]\n",
-    "order_descending = [['P1'], ['P4', 'P3'], ['P2'], ['P5']]\n",
     "\n",
     "for a, b in zip(order_ascending, order_descending):\n",
     "    union = [x for x in a if x in b]\n",
