--- a/electre.ipynb
+++ b/electre.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les données du problème"
+    "# Les données du problème"
    ]
   },
   {
@@ -34,11 +34,11 @@
    "source": [
     "# Données du problème\n",
     "projets = [\n",
-    "    [-600, 4, 3, 10, 5],\n",
-    "    [-300, 3, 3, 8, 15],\n",
-    "    [-350, 5, 1, 8, 5],\n",
-    "    [-250, 1, 5, 4, 35],\n",
-    "    [-100, 2, 2, 5, 30],\n",
+    "    [-600, 4, 3, 10, -5],\n",
+    "    [-300, 3, 3, 8,  -15],\n",
+    "    [-350, 5, 1, 8,  -5],\n",
+    "    [-250, 1, 5, 4,  -35],\n",
+    "    [-100, 2, 2, 5,  -30],\n",
     "]\n",
     "p = [100, 3, 3, 5, 10]\n",
     "q = [50, 2, 2, 3, 5]\n",
@@ -91,7 +91,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
-       "      <td>5</td>\n",
+       "      <td>-5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
@@ -99,7 +99,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>8</td>\n",
-       "      <td>15</td>\n",
+       "      <td>-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
@@ -107,7 +107,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>5</td>\n",
+       "      <td>-5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
@@ -115,7 +115,7 @@
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
-       "      <td>35</td>\n",
+       "      <td>-35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
@@ -123,7 +123,7 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>30</td>\n",
+       "      <td>-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Préférence</th>\n",
@@ -163,11 +163,11 @@
       ],
       "text/plain": [
        "               C1  C2  C3  C4  C5\n",
-       "P1           -600   4   3  10   5\n",
-       "P2           -300   3   3   8  15\n",
-       "P3           -350   5   1   8   5\n",
-       "P4           -250   1   5   4  35\n",
-       "P5           -100   2   2   5  30\n",
+       "P1           -600   4   3  10  -5\n",
+       "P2           -300   3   3   8 -15\n",
+       "P3           -350   5   1   8  -5\n",
+       "P4           -250   1   5   4 -35\n",
+       "P5           -100   2   2   5 -30\n",
        "Préférence    100   3   3   5  10\n",
        "Indifférence   50   2   2   3   5\n",
        "Importance      2   1   1   2   1\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrice de concordance"
+    "# Matrice de concordance"
    ]
   },
   {
@@ -240,40 +240,40 @@
        "    <tr>\n",
        "      <th>P1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.571429</td>\n",
        "      <td>0.714286</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.571429</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
        "      <td>0.857143</td>\n",
-       "      <td>0.571429</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.428571</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.571429</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.857143</td>\n",
+       "      <td>0.428571</td>\n",
        "      <td>0.714286</td>\n",
+       "      <td>0.571429</td>\n",
        "      <td>1</td>\n",
        "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.571429</td>\n",
        "      <td>0.857143</td>\n",
+       "      <td>0.714286</td>\n",
        "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -283,11 +283,11 @@
       ],
       "text/plain": [
        "          P1        P2        P3        P4        P5\n",
-       "P1         1  0.571429  0.714286  0.571429  0.571429\n",
-       "P2         1         1         1  0.857143  0.571429\n",
-       "P3         1  0.857143         1  0.428571  0.571429\n",
-       "P4  0.571429  0.857143  0.714286         1  0.714286\n",
-       "P5  0.714286         1  0.857143  0.857143         1"
+       "P1         1  0.714286  0.714286  0.714286  0.714286\n",
+       "P2  0.857143         1  0.857143         1  0.714286\n",
+       "P3         1         1         1  0.571429  0.714286\n",
+       "P4  0.428571  0.714286  0.571429         1  0.714286\n",
+       "P5  0.571429  0.857143  0.714286  0.857143         1"
       ]
      },
      "execution_count": 4,
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrice de crédibilité"
+    "# Matrice de crédibilité"
    ]
   },
   {
@@ -373,33 +373,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P2</th>\n",
+       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P3</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.857143</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P4</th>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.857143</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P5</th>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.857143</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.857143</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -410,10 +410,10 @@
       "text/plain": [
        "          P1        P2        P3        P4        P5\n",
        "P1         1         0         0         0         0\n",
-       "P2         1         1         1         0         0\n",
-       "P3         1  0.857143         1         0         0\n",
-       "P4  0.571429  0.857143         0         1  0.714286\n",
-       "P5  0.714286         1  0.857143  0.857143         1"
+       "P2  0.857143         1  0.857143         1         0\n",
+       "P3         1         1         1         0         0\n",
+       "P4         0         0         0         1  0.714286\n",
+       "P5         0  0.857143         0  0.857143         1"
       ]
      },
      "execution_count": 5,
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distillation ascendante"
+    "# Distillation ascendante"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distillation descendante"
+    "# Distillation descendante"
    ]
   },
   {
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classement final"
+    "# Classement final"
    ]
   },
   {
